--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-  "dev": "tsx watch --env--file .env src/server.ts",
-  "test:dev": "npx cross-env NODE_OPTIONS=--experimental-vm-modules npx jest --watchAll --runInBand"
-},
+    "dev": "tsx watch --env-file .env -r tsconfig-paths/register src/server.ts",
+    "test:dev": "npx cross-env NODE_OPTIONS=--experimental-vm-modules npx jest --watchAll --runInBand"
+  },
   "license": "ISC",
   "author": "Itamar Junior",
   "description": "API de entregas de encomendas",
@@ -15,6 +15,9 @@
     "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.2",
+    "swagger-ui-express": "^5.0.1",
+    "tsconfig-paths": "^4.2.0",
+    "yamljs": "^0.3.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
